Revision history for Pod-Readme

v1.0.1_05
  [Documentation]
  - Corrected typos in POD.

v1.0.1_04 2014-10-08 23:27 BST
  [Documentation]
  - Changed abstract to make the module's purpose more obvious.

  [Bug Fixes]
  - Added missing IO::String prereq to tests.

v1.0.1_03 2014-10-08 22:42 BST
  [Documentation]
  - Added Acknowledgements section to POD.

  [Bug Fixes]
  - Added minimum version prereq of Moo to fix issue with undef
    defaults.

  [Enhancements]
  - Changed to use Path::Tiny instead of Path::Class.

  - Reverted back to using Exporter, since most core modules already
    use it.

v1.0.1_02 2014-10-08 00:49 BST
  [Documentation]
  - Added missing timestamp to Changes.

  - Updated README.pod.

  [Other Changes]
  - Changed how versions are defined in modules, to handle quirks of
    namespace::autoclean.

  - Changed to use Exporter::Lite.

v1.0.1_01 2014-10-08 00:26 BST
  [Bug Fixes]
  - Fixed argument name for include command.

  - Changed tests to compare files so they handle different Windows
    line endings.

  [Documentation]
  - Fixed POD errors and typos.

  [Enhancements]
  - Switched to use Type::Tiny-based types, with stricter constraints.

  - Switched to use Moo instead of Moose.

  [Other Changes]
  - Minor internal code tweaks.

v1.0.0_03 2014-09-24 21:14 BST
  [Bug Fixes]
  - The tests for the requires plugin handle non-author builds.

  - Fix for tests on some systems.

  [Enhancements]
  - Show path of missing META.yml file in requires plugin.

  [Documentation]
  - Consistent names in POD.

  - Fixed typos in Changes file.

  [Other Changes]
  - Added hooks for author tests in Makefile.PL.

  - Fixed license metadata error to make CPANTS happy, and to be
    consistent with license in the POD.

  - Tests use Exporter instead of Exporter::Lite.

  - Tests use Test::Kit rather than Test::Most, and explicitly import
    the tests modules that they use.

  - Removed redundant prereqs from Makefile.PL.

v1.0.0_02 2014-09-24 14:14 BST